# data-synthesis-example

./: README.md  data synthesis.ipynb  data_creation.py  initial_generation.py  insight_gen.py  insight_generation.py  metadata_generation.py  pyproject.toml  tets  tets.cpp
cache/: cache.bak  cache.dir
data/: diseases.csv  doctors.csv  hospitals.csv  medicine.csv  medicines.csv  observations.csv  patients.csv  prescriptions.csv  tests.csv  visits.csv
insights/: output_date_of_visit.txt  output_patient_name.txt
insights/date_of_visit/: basic.txt  daily stats.txt  frequent coocurrences.txt  frequent relations.txt  monthly stats.txt  yearly stats.txt
insights/disease_name/: basic.txt  frequent relations.txt
