[tool.poetry]
name = "data-synthesis-example"
version = "0.1.0"
description = ""
authors = ["majimearun <arunachala0619@gmail.com>"]
readme = "README.md"
packages = [{include = "data_synthesis_example"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
faker = "^19.1.0"
numpy = "^1.25.1"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
